// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  class="sc-bdVaJa cZZuEL"
  data-testid="icon-wrapper"
>
  <test-file-stub
    image="test-file-stub"
  />
</div>
`;

exports[`matches snapshot with badge 1`] = `
<div
  class="sc-bdVaJa iSeKVI"
  data-testid="icon-wrapper"
>
  <test-file-stub
    image="test-file-stub"
  />
</div>
`;
